初步完成服务器渲染简单组件

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "react-ssr",
   "version": "1.0.0",
   "description": "react服务器端渲染",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:server": "node server/dist/index.js",
+    "dev:build": "./node_modules/webpack/bin/webpack.js --config ./build/webpack.server.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,25 @@
   },
   "homepage": "https://github.com/wuyxp/react-ssr#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "babel": "^6.23.0",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-root-import": "^6.1.0",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
