--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "npm-run-all": "^4.1.3",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
+    "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2"
   }
 }
