--- a/package.json
+++ b/package.json
@@ -46,8 +46,13 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-root-import": "^6.1.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.1",
+    "isomorphic-style-loader": "^4.0.0",
+    "node-sass": "^4.10.0",
     "nodemon": "^1.18.6",
     "npm-run-all": "^4.1.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-merge": "^4.1.4",
