--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/wuyxp/react-ssr#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-http-proxy": "^1.5.0",
     "react": "^16.6.3",
@@ -46,6 +47,7 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-root-import": "^6.1.0",
     "babel-preset-react": "^6.24.1",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
     "isomorphic-style-loader": "^4.0.0",
     "node-sass": "^4.10.0",
